# cpknextgen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: release.yml  test.yml
src/cpknextgen/: __init__.py  __main__.py  capability_index.py  custom_exceptions.py  graphics.py  transformation.py
src/cpknextgen/normal_mixture/: inference.py  parameters_estimate.py
tests/: capability_index_test.py  utils.py
tests/test_data/: test_data.json
